change logo, ph

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.css" integrity="sha512-oxqL25oMBPTFLK5OOR4U/Y//5oyc+3B8MJVTuGD2FLdyA+VXlhKMyQ7YjHNSI5+CLk0UdMLw1lV64dDuT1Batw==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <header class="header">
+    <header class="page-header">
        <div class="container">
-            <nav class="header-nav">
-                <a href="./index.html" class="header-logo">Web<span>Studio</span></a>
+            <nav class="page-header-nav">
+                <a class="logo logo-header" href="./index.html">Web<span class="logo__part--black">Studio</span></a>
                 <ul class="header-pages">
                     <li class="hd-page"><a href="./index.html" class="current">Студия</a></li>
                     <li class="hd-page"><a href="./portfolio.html">Портфолио</a></li>
@@ -335,7 +335,7 @@
 
             <!-- Контакты -->
             <div>
-                <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="logo__part--white">Studio</span></a>
                 <address>
                     <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
                     <ul class="footer-contacts">
