--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
 
 <body>
 
-    <header class="page-header">
-       <div class="container">
-            <nav class="page-header-nav">
+    <header class="header">
+       <div class="container header-container">
+            <nav class="header-nav">
                 <a class="logo logo-header" href="./index.html">Web<span class="logo__part--black">Studio</span></a>
-                <ul class="header-pages">
-                    <li class="hd-page"><a href="./index.html" class="current">Студия</a></li>
-                    <li class="hd-page"><a href="./portfolio.html">Портфолио</a></li>
-                    <li class="hd-page"><a href="">Контакты</a></li>
+                <ul class="nav-list">
+                    <li class="nav-list__item"><a href="./index.html" class="current">Студия</a></li>
+                    <li class="nav-list__item"><a href="./portfolio.html">Портфолио</a></li>
+                    <li class="nav-list__item"><a href="">Контакты</a></li>
                 </ul>
             </nav>
                 <ul class="header-contacts">
-                    <li class="hd-contact-item">
+                    <li class="header-contacts__item">
                         <a href="mailto:info@devstudio.com">
                             <svg class="contact-icon" width="16px" height="12px">
                                 <use href="./images/icons.svg#mail"></use>
                             </svg>info@devstudio.com
                         </a>
                     </li>
-                    <li class="hd-contact-item"><a href="tel:+380961111111">
+                    <li class="header-contacts__item">
+                        <a href="tel:+380961111111">
                         <svg class="contact-icon" width="10px" height="16px">
                             <use href="./images/icons.svg#phone"></use>
                         </svg>+38 096 111 11 11</a>
