--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
             <nav class="header-nav">
                 <a class="logo logo-header" href="./index.html">Web<span class="logo__part--black">Studio</span></a>
                 <ul class="nav-list">
-                    <li class="nav-list__item"><a href="./index.html" class="current">Студия</a></li>
-                    <li class="nav-list__item"><a href="./portfolio.html">Портфолио</a></li>
-                    <li class="nav-list__item"><a href="">Контакты</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link nav-list__link--current" href="./index.html">Студия</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link" href="">Контакты</a></li>
                 </ul>
             </nav>
                 <ul class="header-contacts">
                     <li class="header-contacts__item">
-                        <a href="mailto:info@devstudio.com">
-                            <svg class="contact-icon" width="16px" height="12px">
+                        <a class="header-contacts__link"  href="mailto:info@devstudio.com">
+                            <svg class="header-contacts__icon" width="16px" height="12px">
                                 <use href="./images/icons.svg#mail"></use>
                             </svg>info@devstudio.com
                         </a>
                     </li>
+
                     <li class="header-contacts__item">
-                        <a href="tel:+380961111111">
-                        <svg class="contact-icon" width="10px" height="16px">
+                        <a class="header-contacts__link" href="tel:+380961111111">
+                        <svg class="header-contacts__icon" width="10px" height="16px">
                             <use href="./images/icons.svg#phone"></use>
                         </svg>+38 096 111 11 11</a>
                     </li>
@@ -43,8 +44,8 @@
     <main>
      <!--Герой-->
         <section class="hero">
-           <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-           <button data-modal-open class="btn" > Заказать услугу</button>
+           <h1 class="hero__title">Эффективные решения <br> для вашего бизнеса</h1>
+           <button data-modal-open class="btn hero-btn"> Заказать услугу</button>
         </section>
      <!--Преимущества-->
         <section class="features">
