--- a/index.html
+++ b/index.html
@@ -52,41 +52,41 @@
             <div class="container">
                 <h2 class="visually-hidden">Наши преимущества</h2>               
                 <ul class="features-list grid">
-                    <li>
-                       <div class="feature-icon">
+                    <li class="features-list__item">
+                       <div class="features-list__icon">
                         <svg  width="70px" height="70px">
                             <use href="./images/icons.svg#antenna"></use>
                         </svg>
                        </div>
-                        <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <h3 class="features-list__title">Внимание к деталям</h3>
+                        <p class="features-list__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li>
-                        <div class="feature-icon">
+                    <li class="features-list__item">
+                        <div class="features-list__icon">
                             <svg  width="70px" height="70px">
                                 <use href="./images/icons.svg#clock"></use>
                             </svg>
                            </div>
-                        <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <h3 class="features-list__title">Пунктуальность</h3>
+                        <p class="features-list__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>  
-                    <li>
-                        <div class="feature-icon">
+                    <li class="features-list__item">
+                        <div class="features-list__icon">
                             <svg  width="70px" height="70px">
                                 <use href="./images/icons.svg#diagram"></use>
                             </svg>
                            </div>
-                        <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <h3 class="features-list__title">Планирование</h3>
+                        <p class="features-list__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li>
-                        <div class="feature-icon">
+                    <li class="features-list__item">
+                        <div class="features-list__icon">
                             <svg  width="70px" height="70px">
                                 <use href="./images/icons.svg#astronaut"></use>
                             </svg>
                            </div>
-                        <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <h3 class="features-list__title">Современные технологии</h3>
+                        <p class="features-list__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
         </div>
@@ -94,7 +94,7 @@
      <!--Чем занимаемся-->
         <section class="specialty">
             <div class="container">
-                <h2 class="specialty-title">Чем мы занимаемся</h2>
+                <h2 class="specialty__title">Чем мы занимаемся</h2>
                 <ul class="specialty-list grid">        
                     <li><div class="specialty-thumb">
                          <h3>Десктопные приложения</h3>
@@ -444,7 +444,7 @@
                     Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>    
                 </label>
             
-                <button class="btn" type="submit">Отправить</button>
+                <button class="btn modal-btn" type="submit">Отправить</button>
             </form>
         </div>
     </div>
