--- a/index.html
+++ b/index.html
@@ -96,25 +96,28 @@
             <div class="container">
                 <h2 class="specialty__title">Чем мы занимаемся</h2>
                 <ul class="specialty-list grid">        
-                    <li><div class="specialty-thumb">
-                         <h3>Десктопные приложения</h3>
-                            <img class="img" src="./images/osobenosti/programer-working.jpg" 
+                    <li class="specialty-list__item">
+                        <div class="specialty-thumb">
+                             <h3 class="specialty-list__title">Десктопные приложения</h3>
+                            <img class="thumb__img" src="./images/osobenosti/programer-working.jpg" 
                             alt="Программист работает в офисе за столом" 
                             width="370" height="294">
                         </div>
                     </li>
 
-                    <li><div class="specialty-thumb">
-                        <h3>Мобильные приложения</h3>
-                            <img class="img" src="./images/osobenosti/phone-designer.jpg" 
+                    <li class="specialty-list__item">
+                        <div class="specialty-thumb">
+                            <h3 class="specialty-list__title">Мобильные приложения</h3>
+                            <img class="thumb__img" src="./images/osobenosti/phone-designer.jpg" 
                             alt="Веб-дизайнер разрабатывает интерфейс приложения для смартфонов" 
                             width="370" height="294"> 
                         </div>
                     </li>
 
-                    <li><div class="specialty-thumb">
-                        <h3>Дизайнерские решения</h3>
-                            <img class="img" src="./images/osobenosti/color-design.jpg" 
+                    <li class="specialty-list__item">
+                        <div class="specialty-thumb">
+                            <h3 class="specialty-list__title">Дизайнерские решения</h3>
+                            <img class="thumb__img" src="./images/osobenosti/color-design.jpg" 
                             alt="Веб-дизайнер выбирает цвет на графическом планшете" 
                             width="370" height="294">
                         </div>
@@ -123,40 +126,40 @@
             </div>
         </section>
      <!--Наша команда-->
-        <section class="our-team">
+        <section class="team">
             <div class="container">
-                <h2 class="team-title">Наша команда</h2>
+                <h2 class="team__title">Наша команда</h2>
                 <ul class="team-list grid">
-                    <li>
+                    <li class="team-list__item">
                         <img src="./images/komanda/ihor-demiyanenko.jpg" 
                         alt="Участник команды" width="270" height="260">
-                        <div class="team-list-content">
-                            <h3>Игорь Демьяненко</h3>
-                            <p>Product Designer</p>
-                            <ul class="team social-links">
-                                <li><a href=""> 
-                                        <svg class="link-icon" width="20px" height="20px">
+                        <div class="team-list__content">
+                            <h3 class="team-list__title">Игорь Демьяненко</h3>
+                            <p class="team-list__text">Product Designer</p>
+                            <ul class="social-networks">
+                                <li><a class="social-networks__link  social-networks__team-link"  href=""> 
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
@@ -165,36 +168,36 @@
                         </div>
                     </li>
 
-                    <li>
+                    <li class="team-list__item">
                         <img src="./images/komanda/olga-repina.jpg" alt="Участник команды" 
                         width="270" height="260">
-                        <div class="team-list-content">
-                            <h3>Ольга Репина</h3>
-                            <p>Frontend Developer</p>
-                            <ul class="team social-links">
-                                <li><a href=""> 
-                                        <svg class="link-icon" width="20px" height="20px">
+                        <div class="team-list__content">
+                            <h3 class="team-list__title">Ольга Репина</h3>
+                            <p class="team-list__text">Frontend Developer</p>
+                            <ul class="social-networks">
+                                <li><a class="social-networks__link  social-networks__team-link"  href=""> 
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
@@ -203,36 +206,36 @@
                         </div>
                     </li>
 
-                    <li>
+                    <li class="team-list__item">
                         <img src="./images/komanda/nikolay-tarasov.jpg" 
                         alt="Участник команды" width="270" height="260">
-                        <div class="team-list-content">
-                            <h3>Николай Тарасов</h3>
-                            <p>Marketing</p>
-                            <ul class="team social-links">
-                                <li><a href=""> 
-                                        <svg class="link-icon" width="20px" height="20px">
+                        <div class="team-list__content">
+                            <h3 class="team-list__title">Николай Тарасов</h3>
+                            <p class="team-list__text">Marketing</p>
+                            <ul class="social-networks">
+                                <li><a class="social-networks__link  social-networks__team-link"  href=""> 
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
@@ -241,36 +244,36 @@
                         </div>
                     </li>
                     
-                    <li>
+                    <li class="team-list__item">
                         <img src="./images/komanda/mixail-ermakov.jpg" 
                         alt="" width="270" height="260">
-                        <div class="team-list-content">
-                            <h3>Михаил Ермаков</h3>
-                            <p>UI Designer</p>
-                            <ul class="team social-links">
-                                <li><a href=""> 
-                                        <svg class="link-icon" width="20px" height="20px">
+                        <div class="team-list__content">
+                            <h3 class="team-list__title">Михаил Ермаков</h3>
+                            <p class="team-list__text">UI Designer</p>
+                            <ul class="social-networks">
+                                <li><a class="social-networks__link  social-networks__team-link"  href=""> 
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li><a href="">
-                                        <svg class="link-icon" width="20px" height="20px">
+                                <li><a class="social-networks__link  social-networks__team-link" href="">
+                                        <svg class="social-networks__icon" width="20px" height="20px">
                                             <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
