--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.css" integrity="sha512-oxqL25oMBPTFLK5OOR4U/Y//5oyc+3B8MJVTuGD2FLdyA+VXlhKMyQ7YjHNSI5+CLk0UdMLw1lV64dDuT1Batw==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
@@ -99,7 +99,7 @@
                     <li class="specialty-list__item">
                         <div class="specialty-thumb">
                              <h3 class="specialty-list__title">Десктопные приложения</h3>
-                            <img class="thumb__img" src="./images/osobenosti/programer-working.jpg" 
+                            <img class="specialty-thumb__img" src="./images/osobenosti/programer-working.jpg" 
                             alt="Программист работает в офисе за столом" 
                             width="370" height="294">
                         </div>
@@ -108,7 +108,7 @@
                     <li class="specialty-list__item">
                         <div class="specialty-thumb">
                             <h3 class="specialty-list__title">Мобильные приложения</h3>
-                            <img class="thumb__img" src="./images/osobenosti/phone-designer.jpg" 
+                            <img class="specialty-thumb__img" src="./images/osobenosti/phone-designer.jpg" 
                             alt="Веб-дизайнер разрабатывает интерфейс приложения для смартфонов" 
                             width="370" height="294"> 
                         </div>
@@ -117,7 +117,7 @@
                     <li class="specialty-list__item">
                         <div class="specialty-thumb">
                             <h3 class="specialty-list__title">Дизайнерские решения</h3>
-                            <img class="thumb__img" src="./images/osobenosti/color-design.jpg" 
+                            <img class="specialty-thumb__img" src="./images/osobenosti/color-design.jpg" 
                             alt="Веб-дизайнер выбирает цвет на графическом планшете" 
                             width="370" height="294">
                         </div>
