--- a/portfolio.html
+++ b/portfolio.html
@@ -15,23 +15,23 @@
              <nav class="header-nav">
                  <a class="logo logo-header" href="./index.html">Web<span class="logo__part--black">Studio</span></a>
                  <ul class="nav-list">
-                     <li class="nav-list__item"><a class="nav-list__link" href="./index.html">Студия</a></li>
-                     <li class="nav-list__item"><a class="nav-list__link nav-list__link--current" href="./portfolio.html">Портфолио</a></li>
-                     <li class="nav-list__item"><a class="nav-list__link" href="">Контакты</a></li>
+                     <li class="nav__item"><a class="nav__link" href="./index.html">Студия</a></li>
+                     <li class="nav__item"><a class="nav__link nav__link--current" href="./portfolio.html">Портфолио</a></li>
+                     <li class="nav__item"><a class="nav__link" href="">Контакты</a></li>
                  </ul>
              </nav>
                  <ul class="header-contacts">
-                     <li class="header-contacts__item">
-                         <a class="header-contacts__link"  href="mailto:info@devstudio.com">
-                             <svg class="header-contacts__icon" width="16px" height="12px">
+                     <li class="contacts__item">
+                         <a class="contacts__link"  href="mailto:info@devstudio.com">
+                             <svg class="contacts__icon" width="16px" height="12px">
                                  <use href="./images/icons.svg#mail"></use>
                              </svg>info@devstudio.com
                          </a>
                      </li>
  
-                     <li class="header-contacts__item">
-                         <a class="header-contacts__link" href="tel:+380961111111">
-                         <svg class="header-contacts__icon" width="10px" height="16px">
+                     <li class="contacts__item">
+                         <a class="contacts__link" href="tel:+380961111111">
+                         <svg class="contacts__icon" width="10px" height="16px">
                              <use href="./images/icons.svg#phone"></use>
                          </svg>+38 096 111 11 11</a>
                      </li>
@@ -44,18 +44,18 @@
             <div class="container">
                 <h2 class="visually-hidden">Портфолио наших работ</h2>
                 <ul class="portfolio-filter">
-                    <li class="portfolio-filter__item"><button class="portfolio-filter__btn" type="button">Все</button></li>
-                    <li class="portfolio-filter__item"><button class="portfolio-filter__btn" type="button">Веб-сайты</button></li>
-                    <li class="portfolio-filter__item"><button class="portfolio-filter__btn" type="button">Приложения</button></li>
-                    <li class="portfolio-filter__item"><button class="portfolio-filter__btn" type="button">Дизайн</button></li>
-                    <li class="portfolio-filter__item"><button class="portfolio-filter__btn" type="button">Маркетинг</button></li>
+                    <li class="filter__item"><button class="filter__btn" type="button">Все</button></li>
+                    <li class="filter__item"><button class="filter__btn" type="button">Веб-сайты</button></li>
+                    <li class="filter__item"><button class="filter__btn" type="button">Приложения</button></li>
+                    <li class="filter__item"><button class="filter__btn" type="button">Дизайн</button></li>
+                    <li class="filter__item"><button class="filter__btn" type="button">Маркетинг</button></li>
                 </ul>
         
                 <ul class="portfolio-list grid">
-                    <li class="portfolio-list__item">
-                        <a class="portfolio-list__link" href="">
+                    <li class="portfolio__item grid__item">
+                        <a class="portfolio__link" href="">
                             <div class="portfolio-thumb">
-                                <img class="portfolio-thumb__img" src="./images/portfolio/tehnocrack.jpg" alt="" width="370" height="294">
+                                <img class="portfolio__img" src="./images/portfolio/tehnocrack.jpg" alt="" width="370" height="294">
                                 <p class="portfolio-thumb__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
                             <div class="portfolio-content">
@@ -65,10 +65,10 @@
                         </a>
                     </li>  
 
-                    <li class="portfolio-list__item">
-                        <a class="portfolio-list__link"  href="">
+                    <li class="portfolio__item grid__item">
+                        <a class="portfolio__link"  href="">
                             <div class="portfolio-thumb">
-                                <img class="portfolio-thumb__img" src="./images/portfolio/poster.jpg" alt="" width="370" height="294">
+                                <img class="portfolio__img" src="./images/portfolio/poster.jpg" alt="" width="370" height="294">
                                 <p class="portfolio-thumb__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
                             <div class="portfolio-content">
@@ -78,10 +78,10 @@
                         </a>
                     </li>
 
-                    <li class="portfolio-list__item">
-                        <a class="portfolio-list__link"  href="">
+                    <li class="portfolio__item grid__item">
+                        <a class="portfolio__link"  href="">
                             <div class="portfolio-thumb">
-                                <img class="portfolio-thumb__img" src="./images/portfolio/seafood.jpg" alt="" width="370" height="294">
+                                <img class="portfolio__img" src="./images/portfolio/seafood.jpg" alt="" width="370" height="294">
                                 <p class="portfolio-thumb__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
                             <div class="portfolio-content">
@@ -91,10 +91,10 @@
                         </a>
                     </li> 
 
-                    <li class="portfolio-list__item">
-                        <a class="portfolio-list__link"  href="">
+                    <li class="portfolio__item grid__item">
+                        <a class="portfolio__link"  href="">
                             <div class="portfolio-thumb">
-                                <img class="portfolio-thumb__img" src="./images/portfolio/prime.jpg" alt="" width="370" height="294">
+                                <img class="portfolio__img" src="./images/portfolio/prime.jpg" alt="" width="370" height="294">
                                 <p class="portfolio-thumb__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
                             <div class="portfolio-content">
@@ -104,10 +104,10 @@
                         </a>
                     </li>  
 
-                    <li class="portfolio-list__item">
-                        <a class="portfolio-list__link"  href="">
+                    <li class="portfolio__item grid__item">
+                        <a class="portfolio__link"  href="">
                             <div class="portfolio-thumb">
-                                <img class="portfolio-thumb__img" src="./images/portfolio/boxes.jpg" alt="" width="370" height="294">
+                                <img class="portfolio__img" src="./images/portfolio/boxes.jpg" alt="" width="370" height="294">
                                 <p class="portfolio-thumb__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div> 
                             <div class="portfolio-content">
@@ -117,10 +117,10 @@
                         </a>
                     </li>  
 
-                    <li class="portfolio-list__item"> 
-                        <a class="portfolio-list__link"  href="">
+                    <li class="portfolio__item grid__item"> 
+                        <a class="portfolio__link"  href="">
                             <div class="portfolio-thumb">
-                                <img  class="portfolio-thumb__img" src="./images/portfolio/inspiration.jpg" alt="" width="370" height="294">
+                                <img  class="portfolio__img" src="./images/portfolio/inspiration.jpg" alt="" width="370" height="294">
                                 <p class="portfolio-thumb__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div> 
                             <div class="portfolio-content">
@@ -130,10 +130,10 @@
                          </a>    
                     </li>
 
-                    <li class="portfolio-list__item">
-                        <a class="portfolio-list__link"  href="">
+                    <li class="portfolio__item grid__item">
+                        <a class="portfolio__link"  href="">
                             <div class="portfolio-thumb">
-                                <img class="portfolio-thumb__img" src="./images/portfolio/limited-edition.jpg" alt="" width="370" height="294">
+                                <img class="portfolio__img" src="./images/portfolio/limited-edition.jpg" alt="" width="370" height="294">
                                 <p class="portfolio-thumb__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
                             <div class="portfolio-content">
@@ -143,10 +143,10 @@
                         </a>
                     </li>  
 
-                    <li class="portfolio-list__item">
-                        <a class="portfolio-list__link"  href="">
+                    <li class="portfolio__item grid__item">
+                        <a class="portfolio__link"  href="">
                             <div class="portfolio-thumb">
-                                <img class="portfolio-thumb__img" src="./images/portfolio/lab.jpg" alt="" width="370" height="294">
+                                <img class="portfolio__img" src="./images/portfolio/lab.jpg" alt="" width="370" height="294">
                                 <p class="portfolio-thumb__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
                             <div class="portfolio-content">
@@ -156,10 +156,10 @@
                          </a>
                     </li>  
 
-                    <li class="portfolio-list__item">
-                        <a class="portfolio-list__link"  href="">
+                    <li class="portfolio__item grid__item">
+                        <a class="portfolio__link"  href="">
                             <div class="portfolio-thumb">
-                                <img class="portfolio-thumb__img" src="./images/portfolio/growing-bussines.jpg" alt="" width="370" height="294">
+                                <img class="portfolio__img" src="./images/portfolio/growing-bussines.jpg" alt="" width="370" height="294">
                                 <p class="portfolio-thumb__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
                             <div class="portfolio-content">
@@ -179,11 +179,11 @@
             <!-- Контакты -->
             <div>
                 <a href="./index.html" class="logo">Web<span class="logo__part--white">Studio</span></a>
-                <address>
-                    <p class="footer__location">г. Киев, пр-т Леси Украинки, 26</p>
-                    <ul class="footer-contacts">
-                        <li><a class="footer-contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a class="footer-contacts__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <address class="footer-address">
+                    <p class="address__location">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="address-contacts">
+                        <li><a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
@@ -192,29 +192,29 @@
             <div class="join">
                 <p class="join__title">присоединяйтесь</p>
                 <ul class="social-networks">
-                    <li><a class="social-networks__link social-networks__join-link" href=""> 
-                            <svg class="social-networks__icon" width="20px" height="20px">
+                    <li><a class="social__link social__join-link" href=""> 
+                            <svg class="social__icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
 
-                    <li><a class="social-networks__link social-networks__join-link" href="">
-                            <svg class="social-networks__icon" width="20px" height="20px">
+                    <li><a class="social__link social__join-link" href="">
+                            <svg class="social__icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
 
-                    <li><a class="social-networks__link social-networks__join-link" href="">
-                            <svg class="social-networks__icon" width="20px" height="20px">
+                    <li><a class="social__link social__join-link" href="">
+                            <svg class="social__icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
 
-                    <li><a class="social-networks__link social-networks__join-link" href="">
-                            <svg class="social-networks__icon" width="20px" height="20px">
+                    <li><a class="social__link social__join-link" href="">
+                            <svg class="social__icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#linkedin"></use>
                             </svg>
                         </a>
@@ -228,10 +228,10 @@
                 <form class="sign-form">
 
                     <label for="mail"></label>
-                    <input class="sign-form__input"  type="email" name="mail" id="mail" placeholder="E-mail"/>
+                    <input class="sign__input"  type="email" name="mail" id="mail" placeholder="E-mail"/>
                     
                     <button class="btn sign-btn" type="submit">Подписаться
-                        <svg class="sign-btn__icon" width="24px" height="24px">
+                        <svg class="sign__icon" width="24px" height="24px">
                             <use href="./images/icons.svg#sign"></use> 
                         </svg>
                     </button>
